# sqlmagic

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/sqlmagic/: __init__.py  server.py
src/sqlmagic/core/: config.py  connection.py  exceptions.py
src/sqlmagic/tools/: analytics.py  base.py  basic.py
src/sqlmagic/utils/: cache.py  metrics.py  validators.py
tests/: conftest.py  test_analytics.py  test_basic.py  test_config.py  test_connection.py  test_integration.py  test_performance.py  test_validators.py
